; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_setrunelocale.c___set_thread_rune_locale.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_setrunelocale.c___set_thread_rune_locale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@_DefaultRuneLocale = common dso_local global i32 0, align 4
@_ThreadRuneLocale = common dso_local global i32* null, align 8
@LC_GLOBAL_LOCALE = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__set_thread_rune_locale(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  store i32* @_DefaultRuneLocale, i32** @_ThreadRuneLocale, align 8
  br label %17

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = load i32*, i32** @LC_GLOBAL_LOCALE, align 8
  %9 = icmp eq i32* %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %6
  store i32* null, i32** @_ThreadRuneLocale, align 8
  br label %16

11:                                               ; preds = %6
  %12 = load i32*, i32** %2, align 8
  %13 = call %struct.TYPE_2__* @XLOCALE_CTYPE(i32* %12)
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** @_ThreadRuneLocale, align 8
  br label %16

16:                                               ; preds = %11, %10
  br label %17

17:                                               ; preds = %16, %5
  ret void
}

declare dso_local %struct.TYPE_2__* @XLOCALE_CTYPE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
